--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ __pycache__/
 # C extensions
 *.so
 
+#Ignore th huge files
+movies_metadata.csv
+ratings.csv
+ratings.csv
+
 # Distribution / packaging
 .Python
 build/
